<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/oldTweetsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/counters" />

    <ListView
        android:id="@+id/counter_list"
        android:layout_width="match_parent"
        android:layout_height="14000dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>

    <TextView
        android:id="@+id/hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newCount" />
    
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />

    <Button
        android:id="@+id/stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats" />

</LinearLayout>