<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
		<LinearLayout
		    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >
		    
    	    <Button
       	        android:id="@+id/rename"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:text="@string/rename" />
    	    
    	    <EditText
 		        android:id="@+id/rename_text"
	     	    android:layout_width="fill_parent"
  	            android:layout_height="wrap_content"
                android:scrollbars="horizontal" />
    	    </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02" >

        <TextView
            android:id="@+id/statistics_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/cycle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counts_by_hour" />

</LinearLayout>